# lancedb-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: GITHUB_ACTIONS_SETUP.md  copilot-instructions.md
.github/workflows/: build-and-publish.yml  test-build.yml
lancedb_cli/: __init__.py  __main__.py
test_data/: sample.csv
