[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lancedb-cli"
dynamic = ["version"]
description = "A minimal command line application for managing LanceDB databases"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Davide Dal Farra", email = "davide@codref.org"},
]
keywords = ["lancedb", "cli", "database", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Utilities",
]

dependencies = [
    "lancedb>=0.1.0",
    "duckdb>=0.5.0",
    "pandas>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pygments>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.dynamic]
version = {attr = "lancedb_cli.__version__"}

[project.urls]
Homepage = "https://github.com/codref/lancedb-cli"
Documentation = "https://github.com/codref/lancedb-cli#readme"
Repository = "https://github.com/codref/lancedb-cli.git"
"Bug Tracker" = "https://github.com/codref/lancedb-cli/issues"

[project.scripts]
lsql = "lancedb_cli.__main__:main"

[tool.setuptools]
packages = ["lancedb_cli"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
